//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id Int [pk, increment]
  name String [not null]
  email String [unique, not null]
  phone String
  password String [not null]
  avatar String
  role String [not null, default: 'Employee']
  orders Order [not null]
  ordersOnline OrderOnline [not null]
  handledOrders Order [not null]
  employees Account [not null]
  owner Account
  ownerId Int
  refreshToken RefreshToken [not null]
  sockets Socket [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  addresses DeliveryAddress [not null]
  defaultAddressId Int
  defaultAddress DeliveryAddress
}

Table Dish {
  id Int [pk, increment]
  name String [not null]
  price Int [not null]
  description String [not null]
  image String [not null]
  status String [not null, default: 'Available']
  dishSnapshots DishSnapshot [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table DishSnapshot {
  id Int [pk, increment]
  name String [not null]
  price Int [not null]
  description String [not null]
  image String [not null]
  status String [not null, default: 'Available']
  dishId Int
  dish Dish
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  order Order [not null]
  orderOnlineDishes OrderOnlineItem [not null]
}

Table Table {
  number Int [pk]
  capacity Int [not null]
  orders Order [not null]
  guests Guest [not null]
  status String [not null, default: 'Available']
  token String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Order {
  id Int [pk, increment]
  guestId Int
  guest Guest
  accountId Int
  account Account
  table Table
  tableNumber Int
  dishSnapshot DishSnapshot [not null]
  dishSnapshotId Int [unique, not null]
  quantity Int [not null]
  orderHandler Account
  orderHandlerId Int
  status String [not null, default: 'Pending']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table RefreshToken {
  token String [pk]
  accountId Int [not null]
  account Account [not null]
  expiresAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table Guest {
  id Int [pk, increment]
  name String [not null]
  table Table
  tableNumber Int
  orders Order [not null]
  refreshToken String
  refreshTokenExpiresAt DateTime
  sockets Socket [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Socket {
  socketId String [pk]
  accountId Int [unique]
  account Account
  guestId Int [unique]
  guest Guest
}

Table OrderOnline {
  id Int [pk, increment]
  trackingNumber String
  accountId Int [not null]
  account Account [not null]
  deliveryAddressId Int [not null]
  deliveryAddress DeliveryAddress [not null]
  status String [not null, default: 'Pending']
  paymentMethod String [not null]
  deliveryOption String [not null]
  totalPrice Int [not null]
  items OrderOnlineItem [not null]
  note String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table OrderOnlineItem {
  id Int [pk, increment]
  orderOnlineId Int [not null]
  orderOnline OrderOnline [not null]
  dishSnapshotId Int [not null]
  dishSnapshot DishSnapshot [not null]
  quantity Int [not null]
  price Int [not null]
}

Table DeliveryFees {
  id Int [pk, increment]
  code String [unique, not null]
  label String [not null]
  description String
  estimatedTime String
  baseFee Int [not null]
  extraFeePerKm Int [not null, default: 0]
  maxDistance Int [not null, default: 0]
  isActive Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table DeliveryAddress {
  id Int [pk, increment]
  accountId Int [not null]
  account Account [not null]
  recipientName String [not null]
  recipientPhone String [not null]
  province String [not null]
  provinceName String [not null]
  district String [not null]
  districtName String [not null]
  ward String [not null]
  wardName String [not null]
  addressDetail String [not null]
  addressNotes String
  orderOnline OrderOnline [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Account Account [not null]
}

Ref: Account.ownerId > Account.id

Ref: Account.defaultAddressId - DeliveryAddress.id

Ref: DishSnapshot.dishId > Dish.id [delete: Set Null]

Ref: Order.guestId > Guest.id [delete: Set Null]

Ref: Order.accountId > Account.id [delete: Set Null]

Ref: Order.tableNumber > Table.number [delete: Set Null]

Ref: Order.dishSnapshotId > DishSnapshot.id [delete: Cascade]

Ref: Order.orderHandlerId > Account.id [delete: Set Null]

Ref: RefreshToken.accountId > Account.id [delete: Cascade]

Ref: Guest.tableNumber > Table.number [delete: Set Null]

Ref: Socket.accountId > Account.id [delete: Set Null]

Ref: Socket.guestId > Guest.id [delete: Set Null]

Ref: OrderOnline.accountId > Account.id

Ref: OrderOnline.deliveryAddressId > DeliveryAddress.id

Ref: OrderOnlineItem.orderOnlineId > OrderOnline.id

Ref: OrderOnlineItem.dishSnapshotId > DishSnapshot.id

Ref: DeliveryAddress.accountId > Account.id [delete: Cascade]